--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 JWT_SECRET = "SECRET KEY"
 LOCAL_URL= "http://localhost:3000/"
-PASS = "hassanali_9798@"
-EMAIL= "hassankhanhk9798@outlook.com"
+PASS = "zfaisal86345246@$80"
+EMAIL= "faisalzaman11@outlook.com"
