--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
   },
   "dependencies": {
     "@next/font": "13.0.7",
+    "axios": "^1.3.2",
+    "dotenv": "^16.0.3",
     "eslint": "8.30.0",
     "eslint-config-next": "13.0.7",
+    "jsonwebtoken": "^9.0.0",
     "next": "13.0.7",
     "react": "18.2.0",
     "react-dom": "18.2.0"
