--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 JWT_SECRET = "SECRETKEY"
 LOCAL_URL= "http://localhost:3000/"
-PASS = "zfaisal86345246@$80"
-EMAIL= "faisalzaman11@outlook.com"
+PASS = "give outlook password"
+EMAIL= "give outloook email"
